bug: Link BidDetail's controller to fxml