@@ -97,6 +97,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.nhom1.auction.client.ClientApplication</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
 
